# stuntrace

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
include/srf/: cpu_ops.h  functions.h
src/main/: main.c
src/recomp/: srf_attract.c  srf_audio.c  srf_boot.c  srf_display.c  srf_gameplay.c  srf_init.c  srf_input.c  srf_nmi.c  srf_objects.c  srf_title.c
tools/disasm/: disasm.py
